--- a/logo-backend-api/remote/production/api.service
+++ b/logo-backend-api/remote/production/api.service
@@ -1,17 +1,13 @@
 [Unit]
 # Description is a human-readable name for the service.
-Description=Greenlight API service
+Description=logo API service
 # Wait until PostgreSQL is running and the network is "up" before starting the service.
 After=postgresql.service
 After=network-online.target
 Wants=network-online.target
-# Configure service start rate limiting. If the service is (re)started more than 5 times
-# in 600 seconds then don't permit it to start anymore.
 StartLimitIntervalSec=600
 StartLimitBurst=5
 [Service]
-# Execute the API binary as the greenlight user, loading the environment variables from
-# /etc/environment and using the working directory /home/greenlight.
 Type=exec
 User=andrew
 Group=andrew
